# FSDM---Game-Programing

./: CMakeLists.txt  README.md  main.cpp
assets/: map.txt  map2.txt
assets/textures/: sprite_source.txt
libraries/win/SFML-2.5.1/lib/cmake/SFML/: SFMLConfig.cmake  SFMLSharedTargets.cmake  SFMLStaticTargets.cmake
src/: common.cpp  common.hpp  game.cpp  game.hpp  gameEvent.cpp  gameEvent.hpp  graphicSettings.cpp  graphicSettings.hpp  main.cpp  soundBoard.cpp  soundBoard.hpp  statistics.cpp  statistics.hpp
src/FiniteStateMachine/: finiteStateMachine.cpp  finiteStateMachine.hpp  state.cpp  state.hpp
src/Objects/: ball.cpp  ball.hpp  button.cpp  button.hpp  counter.cpp  counter.hpp  label.cpp  label.hpp  object.cpp  object.hpp  paddle.cpp  paddle.hpp
src/Signal/: event.hpp  signal.cpp
src/Utils/: circle.cpp  circle.hpp  function.cpp  function.hpp  line.cpp  line.hpp  rectangle.cpp  rectangle.hpp  segment.cpp  segment.hpp  shape.cpp  shape.hpp  vector.cpp  vector.hpp
src/entities/: entity.cpp  entity.hpp  fruit.cpp  fruit.hpp  ghost.cpp  ghost.hpp  pacman.cpp  pacman.hpp  smallPoint.cpp  smallPoint.hpp
src/entities/ghostStates/: deadGhostState.cpp  deadGhostState.hpp  defaultGhostState.cpp  defaultGhostState.hpp  fleeGhostState.cpp  fleeGhostState.hpp  ghostState.cpp  ghostState.hpp
src/finiteStateMachine/: finiteState.cpp  finiteState.hpp  finiteStateEvent.cpp  finiteStateEvent.hpp  finiteStateMachine.cpp  finiteStateMachine.hpp
src/map/: field.cpp  field.hpp  map.cpp  map.hpp
src/misc/: animatedSprite.cpp  animatedSprite.hpp  animation.cpp  animation.hpp  message.cpp  message.hpp  singleton.hpp
src/signal/: event.cpp  event.hpp  listener.cpp  listener.hpp  signal.hpp
src/systems/: assetManager.cpp  assetManager.hpp  console.cpp  console.hpp  inputHandler.cpp  inputHandler.hpp  scene.cpp  scene.hpp
